# embodied-claude

./: .gitignore  .mcp.example.json  .mcp.json.example  AGENTS.md  CLAUDE.md  LICENSE  MIRROR_POLICY.md  README-ja.md  README.md  autonomous-action.sample.sh  autonomous-action.sh  autonomous-mcp.json.example  mcpBehavior.toml  schedule.sample.conf  socialPolicy.toml  test-autonomous.sh
.claude/: settings.json
.claude/commands/: note-counterfactual.md  observe.md  (+3 more)
desire-system/: backend.py  desire_updater.py  server.py
docs/: sociality-anomaly-detection.md
elevenlabs-t2s-mcp/: .env.example
memory-mcp/: pyproject.toml
memory-mcp/benchmarks/: bench_memory.py
memory-mcp/docker/: .env.example  docker-compose.yml
memory-mcp/docker/embedding-api/: Dockerfile  app.py
memory-mcp/docker/postgres/: Dockerfile
memory-mcp/docker/postgres/init/: 01-extensions.sql  02-test-db.sql
memory-mcp/docker/scripts/: migrate-chromadb.sh  setup.sh
memory-mcp/scripts/: merge_memories.py
memory-mcp/src/memory_mcp/: __init__.py  association.py  config.py  consolidation.py  embeddings.py  episode.py  image_utils.py  memory.py  metacognition.py  migrate.py  migration.py  postgres_store.py  schema.py  sensory.py  server.py  store.py  types.py
memory-mcp/tests/: conftest.py  test_causal_links.py  test_divergent_recall.py  test_episode.py  test_hopfield.py  test_image_utils.py  test_memory.py  test_metacognition.py  test_sensory.py  test_types.py  test_working_memory.py
scripts/: check-mirror-sync.sh  check_wifi_docs.py  crop_sky.py  desire-tick.ts  journal_counterfactual.py  journal_external_proposal.py  seed-person-from-toml.py
sociality-mcp/: pyproject.toml
toio-mcp/: README.md  pyproject.toml
toio-mcp/src/toio_mcp/: __init__.py  config.py  controller.py  server.py
toio-mcp/tests/: test_config.py  test_controller.py  test_server.py
wifi-cam-mcp/: .env.example  README.md
(+52 files in other folders)
